--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,3 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
+
+/* 
+font-family: 'Raleway', sans-serif;
+*/
+
 header {
   display: flex;
   justify-content: space-around;
@@ -23,7 +35,36 @@ header {
   background-color: #ffff;
 }
 
-.banner{
-    display: flex;
-    background-image: image('../img/banner.jpg');
+.banner {
+  display: flex;
+  width: 100vw;
+  height: 20rem;
+  background-image: url('../img/banner.png');
+  background-size: cover;
+  margin-top: 2rem;
+  color: #f5f5f5;
+}
+
+.text-banner {
+  padding: 9rem;
+}
+
+.text-banner > h2 {
+  font-size: 52px;
+}
+
+.text-banner > p {
+  font-size: 22px;
+  margin-top: 1rem;
+}
+
+.text-banner > input {
+  background-color: #2a7ae4;
+  padding: 0.7rem;
+  color: #f5f5f5;
+  font-family: 'Raleway', sans-serif;
+  margin-top: 1rem;
+  border: 1px solid #2a7ae4;
+
+
 }
